--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -7307,8 +7307,8 @@ html.no-js{
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  -ms-touch-action: pan-y;
-  touch-action: pan-y;
+  //-ms-touch-action: pan-y;
+  //touch-action: pan-y;
   -webkit-tap-highlight-color: transparent;
 }
 .slick-list {
