--- a/assets/new-home-page.scss.liquid
+++ b/assets/new-home-page.scss.liquid
@@ -119,7 +119,7 @@
         align-items: flex-end;
 
         .hero__text_title, .new-releases-shop-loungewear__text_title {
-            color: #fff;
+            color: #2B2B2B;
             font-size: 36px;
             line-height: 43px;
             text-transform: uppercase;
@@ -156,8 +156,8 @@
             font-size: 14px;
             line-height: 16px;
             text-align: center;
-            color: #fff;
-            background: #2B2B2B;
+            color: #2B2B2B;
+            background: #fff;
             text-decoration: none;
             margin-top: 9px;
             transition: all .5s ease-in-out;
