Installed Klarna JS library; Added cart banner

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -25,9 +25,25 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-780794742"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-780794742'); </script>
 
-
-
 <!-- End Google Tag Manager -->
+
+
+
+<!-- Klarna on-site messaging JavaScript Library -->
+<script
+  async
+  src="https://na-library.klarnaservices.com/lib.js"
+  data-client-id="d12f09c7-8f42-545e-8006-e2775fd6c541"
+></script>
+
+<script>
+  window.KlarnaOnsiteService.push({ eventName: 'refresh-placements' });
+</script>
+
+<!-- END Klarna on-site messaging JavaScript Library -->
+
+
+
 <meta name="facebook-domain-verification" content="mo4rbu71wtgu9f4cigw5403jbogfic" />
 <meta name="google-site-verification" content="jXHP3v15J17cFUFugBHG98a5Ab80RCUtCEXPYDMVgGw" />
 {% include 'booster-seo' %}
