--- a/snippets/product-form.liquid
+++ b/snippets/product-form.liquid
@@ -85,6 +85,14 @@
             <span class="js-qty__adjust js-qty__adjust--plus quantity__plus">+</span>
           </div>
         {% endif %}      
+
+        <!-- Placement v2 -->
+        <klarna-placement
+          data-key="credit-promotion-auto-size"
+          data-locale="en-US"
+          data-purchase-amount=""
+        ></klarna-placement>
+        <!-- end Placement -->
       
         <div class="add-to-cart__wrapper">
           <button type="submit" name="add" data-add-to-cart id="AddToCart-{{ section.id }}" class="btn btn--large btn--full btn--clear uppercase addToCart{% if sold_out %} disabled{% endif %}" {% if sold_out %}disabled="true"{% endif %}>
