updated product page placement

--- a/snippets/product-form.liquid
+++ b/snippets/product-form.liquid
@@ -86,7 +86,7 @@
           </div>
         {% endif %}      
 
-        <!-- Placement v2 -->
+        <!-- Klarna Banner Product Page -->
         <klarna-placement
           data-key="credit-promotion-auto-size"
           data-locale="en-US"
