Align hero text bottom left

--- a/assets/new-home-page.scss.liquid
+++ b/assets/new-home-page.scss.liquid
@@ -110,7 +110,7 @@
     .wrapper {
         display: flex;
         align-items: center;
-        justify-content: flex-end;
+        justify-content: flex-start;
     }
 
     .hero__text, .new-releases-shop-loungewear__text {
@@ -125,7 +125,7 @@
             text-transform: uppercase;
             max-width: 380px;
             width: 100%;
-            text-align: right;
+            text-align: left;
 
             @media (min-width: 481px) {
                 font-size: 52px;
