--- a/assets/new-home-page.scss.liquid
+++ b/assets/new-home-page.scss.liquid
@@ -116,7 +116,7 @@
     .hero__text, .new-releases-shop-loungewear__text {
         display: flex;
         flex-flow: column;
-        align-items: flex-end;
+        align-items: flex-start;
 
         .hero__text_title, .new-releases-shop-loungewear__text_title {
             color: #2B2B2B;
