--- a/snippets/sizing_popup.liquid
+++ b/snippets/sizing_popup.liquid
@@ -1,10 +1,23 @@
 {% assign size_page = pages[block.settings.page_view] %}
+{%- assign product_description_content = product.metafields.product.short_description -%}
 <p class="size-guide-link">
-    <a id="toggleProductModal-{{ section.id }}" class="border-bottom-link uppercase" data-mfp-src="#ProductModal-{{ section.id }}">
-        {% comment %}{{ size_page.title }}{% endcomment %}
+    <a id="toggleProductModal-{{ section.id }}" class="border-bottom-link uppercase"
+       data-mfp-src="#ProductModal-{{ section.id }}">
         VIEW SIZE GUIDE
     </a>
 </p>
-<div id="ProductModal-{{ section.id }}" class="product-modal mfp-hide">
-    <div class="rte">{{ size_page.content }}</div>
+<div id="ProductModal-{{ section.id }}" class="product-modal product-modal-size mfp-hide">
+    <div class="product-section">
+        <div class="product-section-top__image">
+            <img class="lazyload fade-in" src="{{ product.featured_image | img_url: 'large' }}"
+                 alt="{{ product.featured_image.alt }}"/>
+        </div>
+        <div class="product-section-top__text">
+            <h2 class="product-section-top__text-title">{{ product.title }}</h2>
+            <div class="product-section-top__text-description product-description rte">
+                {{ product_description_content | replace: '<p>[split]</p>', '[split]' | split: '[split]' | first }}
+            </div>
+        </div>
+    </div>
+    <div class="size-modal-content">{{ size_page.content }}</div>
 </div>
