--- a/layout/checkout.liquid
+++ b/layout/checkout.liquid
@@ -29,6 +29,15 @@
           <header class="main__header" role="banner">
             {{ content_for_logo }}
             {{ breadcrumb }}
+            
+        <!-- Klarna Banner -->
+        <klarna-placement
+          data-key="credit-promotion-auto-size"
+          data-locale="en-US"
+          data-purchase-amount=""
+        ></klarna-placement>
+        <!-- end Placement -->
+
             {{ alternative_payment_methods }}
           </header>
           <main class="main__content" role="main">
