added Klarna libary import script

--- a/layout/checkout.liquid
+++ b/layout/checkout.liquid
@@ -6,6 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height, minimum-scale=1.0, user-scalable=0">
     <meta name="referrer" content="origin">
 
+<!-- Klarna Import Script -->
+<script
+  async
+  src="https://na-library.klarnaservices.com/lib.js"
+  data-client-id="d12f09c7-8f42-545e-8006-e2775fd6c541"
+></script>
+
+<script>
+    window.Klarna.OnsiteMessaging.refresh();
+</script>
+<!-- End Klarna Import Script -->
+
     <title>{{ page_title }}</title>
 
     {{ content_for_header }}
