--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -9092,6 +9092,11 @@ span {
   max-width: 514px;
 }
 
+.cart #gsAppContainer .gs__wrapper {
+  max-width: 506px !important;
+  width: 100% !important;
+}
+
 .otCookiesNotification #cookies-wrapper {
   z-index: 1000000000;
 }
