--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -9114,3 +9114,7 @@ body .mfp-wrap {
   overflow: auto;
   top: 0 !important;
 }
+
+select.single-option-selector option[disabled] {
+  color: rgba(204, 204, 204, 0.85);
+}
