--- a/snippets/product-form.liquid
+++ b/snippets/product-form.liquid
@@ -7,6 +7,18 @@
 
 
       {% form 'product', product %}
+          {% if product.options.size >= 1 %}
+              <script>
+                  var product_variants_removed = [
+                      {%- for variant in product.variants -%}
+                      {%- unless variant.available -%}
+                      '{{ variant.option2 }}',
+                      {%- endunless -%}
+                      {%- endfor -%}
+                  ];
+              </script>
+          {% endif %}
+
         {% unless product.has_only_default_variant %}
 
           {% for option in product.options_with_values %}
